http://bugs.dwscoalition.org/show_bug.cgi?id=3243
Fix left-alignment of text in the standout box, which looks weird when you have links to pages spanning multiple lines in the comments area.

Patch by fu.

--- a/htdocs/stc/lj_base-app.css
+++ b/htdocs/stc/lj_base-app.css
@@ -95,6 +95,7 @@ div.columns-2-r300 .columns-2-right {
 
 .action-box {
     margin: 0.5em auto 0 auto;
+    text-align: center;
     /* centering */
     position: relative;
     float: right;
